Uses boolean.valueof( )